れんげちゃんかわいいよ！
border-raidiusの仕様を完全誤解してました。
円形作成時のradius値を50%にしました。

--- a/css/style.css
+++ b/css/style.css
@@ -246,11 +246,11 @@ section .elements-list {
   width: 35px;
   border: 3px solid transparent;
   border-top: 3px solid #017bce;
-  -webkit-border-radius: 23.33333px !important;
-  -moz-border-radius: 23.33333px !important;
-  -ms-border-radius: 23.33333px !important;
-  -o-border-radius: 23.33333px !important;
-  border-radius: 23.33333px !important;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  -ms-border-radius: 50% !important;
+  -o-border-radius: 50% !important;
+  border-radius: 50% !important;
   -webkit-animation-name: circle-loader;
   -moz-animation-name: circle-loader;
   -ms-animation-name: circle-loader;
@@ -279,11 +279,11 @@ section .elements-list {
   width: 35px;
   border: 3px solid transparent;
   border-top: 3px solid #017bce;
-  -webkit-border-radius: 23.33333px !important;
-  -moz-border-radius: 23.33333px !important;
-  -ms-border-radius: 23.33333px !important;
-  -o-border-radius: 23.33333px !important;
-  border-radius: 23.33333px !important;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  -ms-border-radius: 50% !important;
+  -o-border-radius: 50% !important;
+  border-radius: 50% !important;
   -webkit-animation-name: circle-loader;
   -moz-animation-name: circle-loader;
   -ms-animation-name: circle-loader;
@@ -312,11 +312,11 @@ section .elements-list {
   width: 35px;
   border: 3px solid transparent;
   border-top: 3px solid #017bce;
-  -webkit-border-radius: 23.33333px !important;
-  -moz-border-radius: 23.33333px !important;
-  -ms-border-radius: 23.33333px !important;
-  -o-border-radius: 23.33333px !important;
-  border-radius: 23.33333px !important;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  -ms-border-radius: 50% !important;
+  -o-border-radius: 50% !important;
+  border-radius: 50% !important;
   -webkit-animation-name: circle-loader;
   -moz-animation-name: circle-loader;
   -ms-animation-name: circle-loader;
@@ -345,11 +345,11 @@ section .elements-list {
   width: 35px;
   border: 3px solid transparent;
   border-top: 3px solid #017bce;
-  -webkit-border-radius: 23.33333px !important;
-  -moz-border-radius: 23.33333px !important;
-  -ms-border-radius: 23.33333px !important;
-  -o-border-radius: 23.33333px !important;
-  border-radius: 23.33333px !important;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  -ms-border-radius: 50% !important;
+  -o-border-radius: 50% !important;
+  border-radius: 50% !important;
   -webkit-animation-name: circle-loader;
   -moz-animation-name: circle-loader;
   -ms-animation-name: circle-loader;
@@ -378,11 +378,11 @@ section .elements-list {
   width: 35px;
   border: 3px solid transparent;
   border-top: 3px solid #017bce;
-  -webkit-border-radius: 23.33333px !important;
-  -moz-border-radius: 23.33333px !important;
-  -ms-border-radius: 23.33333px !important;
-  -o-border-radius: 23.33333px !important;
-  border-radius: 23.33333px !important;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  -ms-border-radius: 50% !important;
+  -o-border-radius: 50% !important;
+  border-radius: 50% !important;
   -webkit-animation-name: circle-loader;
   -moz-animation-name: circle-loader;
   -ms-animation-name: circle-loader;
