--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,7 +17,7 @@
 	width: $size;
 	border: $border-width solid transparent;
 	border-top: $border-width solid $color;
-	@include border-radius($size/1.5 !important);
+	@include border-radius(50% !important);
 	@include single-animation(circle-loader, $duration, $function);
 }
 
